Notes on boxing

--- a/performance-haskell.cabal
+++ b/performance-haskell.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Lib
       Parallel
+      Unboxed
   other-modules:
       Paths_performance_haskell
   hs-source-dirs:
