--- a/performance-haskell.cabal
+++ b/performance-haskell.cabal
@@ -27,15 +27,18 @@ library
   exposed-modules:
       Lib
       Parallel
-      Unboxed
   other-modules:
       Paths_performance_haskell
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , deepseq
     , parallel
+    , primitive
     , timeit
+    , vector
   default-language: Haskell2010
 
 executable performance-haskell-exe
@@ -47,9 +50,13 @@ executable performance-haskell-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , deepseq
     , parallel
     , performance-haskell
+    , primitive
     , timeit
+    , vector
   default-language: Haskell2010
 
 test-suite performance-haskell-test
@@ -62,7 +69,11 @@ test-suite performance-haskell-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , deepseq
     , parallel
     , performance-haskell
+    , primitive
     , timeit
+    , vector
   default-language: Haskell2010
