--- a/performance-haskell.cabal
+++ b/performance-haskell.cabal
@@ -47,7 +47,7 @@ executable performance-haskell-exe
       Paths_performance_haskell
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -O2 -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , bytestring
